<resources>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="view_pager_description">Swipeable content sections</string>
    <string name="cursor_actions">光标操作</string>
    <string name="go_to_end">到全文末尾</string>
    <string name="move_up">上移</string>
    <string name="move_down">下移</string>
    <string name="move_left">左移</string>
    <string name="move_right">右移</string>
    <string name="line_home">行首</string>
    <string name="line_end">行末</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="application_name">QFLIStudio+</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="app_title">LuaStudio+</string>
    <string name="xml_translator_title">XML转换器</string>
    <string name="accsibility_service_description">辅助功能</string>
    <string name="back_tip">再按一下返回键退出</string>
    <string name="copy_button">复制</string>
    <string name="transformation_button">转换</string>
    <string name="preview_button">预览</string>
    <string name="show_layout_title">预览布局</string>
    <string name="project_control">工程编辑</string>
    <string name="loading_tip">正在载入...</string>
    <string name="fix_project">工程修复</string>
    <string name="project_permission_editor">权限编辑</string>
    <string name="common_recovery">常规恢复</string>
    <string name="deletebm_recovery">误删恢复</string>
    <string name="project_recovery">工程恢复</string>
    <string name="search_tip">请输入关键词按回车以搜索..</string>
    <string name="search_api_tip">请输入类关键字段..</string>
    <string name="all">全部</string>
    <string name="type">类型</string>
    <string name="project">工程</string>
    <string name="app">应用</string>
    <string name="delete">删除</string>
    <string name="java_api_title">Java Api 浏览器</string>
    <string name="ok_button">确定</string>
    <string name="import_button">导入</string>
    <string name="path">路径</string>
    <string name="version">版本</string>
    <string name="packagename">包名</string>
    <string name="name">名称</string>
    <string name="developer">开发者</string>
    <string name="description">描述</string>
    <string name="read_lsinfo_error">无法从备份文件读取到工程信息。</string>
    <string name="first_log">运行此应用来查看日志，如果没有错误则不显示</string>
    <string name="clear_all">清空</string>
    <string name="save_project">保存工程</string>
    <string name="share_project">分享工程</string>
    <string name="bin_project">打包工程</string>
    <string name="bin_module">打包模块</string>
    <string name="project_info">工程属性</string>
    <string name="tip_text">提示</string>
    <string name="copy_tip">已复制到您的剪切板</string>
    <string name="project_info_editor">属性编辑</string>
    <string name="import_tip">导入工程</string>
    <string name="import_succeed_tip">导入成功</string>
    <string name="cancel_button">取消</string>
    <string name="help_roster">贡献名单</string>
    <string name="get_info_error">获取失败</string>
    <string name="project_operation">工程操作</string>
    <string name="construction_method">构建方法</string>
    <string name="public_incident">公有事件</string>
    <string name="public_getter">公有getter</string>
    <string name="public_setter">公有setter</string>
    <string name="pubilc_field">公有字段</string>
    <string name="public_method">公有方法</string>
    <string name="save">保存</string>
    <string name="lua_common_project">Lua普通工程</string>
    <string name="luajava_mix_project">LuaJava混合工程</string>
    <string name="create_lua_project">新建Lua工程</string>
    <string name="create_py_project">新建Python工程</string>
    <string name="create_c_project">新建C工程</string>
    <string name="create_cpp_project">新建Cpp工程</string>
    <string name="create_project">新建工程</string>
    <string name="app_name">应用名称</string>
    <string name="app_packagename">应用包名</string>
    <string name="app_type">应用类型</string>
    <string name="create_project_error">工程已存在</string>
    <string name="create_project_succeed">创建工程成功</string>
    <string name="app_path">应用路径</string>
    <string name="home">主页</string>
    <string name="save_succeed">已保存</string>
    <string name="layout_project_repair">工程修复</string>
    <string name="unknown_packagename">未知包名</string>
    <string name="unknown_appname">未知名称</string>
    <string name="unknown_template">未知工程类型</string>
    <string name="choose_file_dialog_title">选择文件</string>
    <string name="get_permission_message">"LuaStudio正常运行需要获取一些基础权限：\n•读取设备存储空间。\n•写入设备存储空间。"</string>
    <string name="save_error">保存失败</string>
    <string name="redo">重做</string>
    <string name="file_not_open">未打开文件</string>
    <string name="preview_error">预览失败</string>
    <string name="xml2table_error">非xml格式布局，转换失败</string>
    <string name="layout_editor_title">编辑布局</string>
    <string name="preview_layout">预览布局</string>
    <string name="layout_save_tip">是否保存当前状态？</string>
    <string name="parent_widget_click_error">已是最底层控件</string>
    <string name="layout_delete_error_tip">不可以删除最底层控件。</string>
    <string name="layout_delete_tip">删除后无法恢复，是否删除此控件？</string>
    <string name="layout_helper">布局助手</string>
    <string name="nothing">无</string>
    <string name="exit">退出</string>
    <string name="copy">复制</string>
    <string name="path_pattern">关联</string>
    <string name="theme">主题</string>
    <string name="download_title">系统下载目录</string>
    <string name="qq_download_dir">QQ文件下载目录</string>
    <string name="qq_download_pic_dir">QQ保存的图片</string>
    <string name="tim_download_dir">TIM文件下载目录</string>
    <string name="tim_download_pic_dir">TIM保存的图片</string>
    <string name="camera_dir">相机</string>
    <string name="pictures_dir">图片库</string>
    <string name="xml_2_aly">Xml转Table</string>
    <string name="parent_widget">父控件</string>
    <string name="children_widget">子控件</string>
    <string name="edit">编辑</string>
    <string name="preview">预览</string>
    <string name="editor_layout_error">不支持编辑该布局</string>
    <string name="add">添加</string>
    <string name="choose_file">选择文件</string>
    <string name="signature_algorithm">签名算法</string>
    <string name="control_panel">控制面板</string>
    <string name="keystore_path">密钥路径</string>
    <string name="show_password">显示密码</string>
    <string name="keystore_password">密钥密码</string>
    <string name="keystore_ailas">密钥别名</string>
    <string name="keystore_ailas_password">别名密码</string>
    <string name="use_public_keystore_tip">使用公用密钥签名</string>
    <string name="choose_keystore">选择密钥</string>
    <string name="input_nil">输入为空！</string>
    <string name="lua_doc_title">Lua 文档</string>
    <string name="color_perference_title">配色参考</string>
    <string name="project_list_title">工程列表</string>
    <string name="file_operation">文件操作</string>
    <string name="common_mode">常用功能</string>
    <string name="tools_text">工具</string>
    <string name="import_project">导入工程</string>
    <string name="donation_dialog_title">捐赠</string>
    <string name="donation_text">捐赠</string>
    <string name="argb_dialog_title">颜色选择器</string>
    <string name="jump">跳转</string>
    <string name="alipay">支付宝</string>
    <string name="weixin">微信</string>
    <string name="qq">QQ</string>
    <string name="other">其他</string>
    <string name="add_file">新建文件</string>
    <string name="insert_code">插入代码</string>
    <string name="code_check">代码查错</string>
    <string name="code_format">代码对齐</string>
    <string name="import_analysis">导入分析</string>
    <string name="code_navigation">代码导航</string>
    <string name="search_code">搜索代码</string>
    <string name="jump_line">跳转行数</string>
    <string name="project_list">工程列表</string>
    <string name="project_import">导入工程</string>
    <string name="import_resources">导入资源</string>
    <string name="close_project">关闭工程</string>
    <string name="compile_lua_file">编译Lua文件</string>
    <string name="java_api">Java Api</string>
    <string name="color_reference">配色参考</string>
    <string name="logcat">调试日志</string>
    <string name="building_apk_tip">正在打包，请勿退出...</string>
    <string name="force_exit">强制退出</string>
    <string name="building_tip_1">即将打包工程：</string>
    <string name="building_tip_2">打包模块已就绪</string>
    <string name="building_tip_3">如果打包出错无法返回可长按页面或长按顶栏强制退出，并将报错截图反馈于我。</string>
    <string name="building_tip_4">特别注意：工程目录所有文件名不得包含中文，否则可能会造成打包失败</string>
    <string name="project_not_open_tip">暂未打开工程</string>
    <string name="file_not_open_tip">未打开文件</string>
    <string name="code_operation">代码操作</string>
    <string name="icon_depository">图标仓库</string>
    <string name="lua_course">Lua 教程</string>
    <string name="lua_explain">Lua 说明</string>
    <string name="argb_tool">Argb 工具</string>
    <string name="action_settings">设置</string>
    <string name="hello_world">Hello world!</string>
    <string name="playing">运行</string>
    <string name="packing">打包</string>
    <string name="search">查找</string>
    <string name="undo">撤销</string>
    <string name="action_spinner">最近</string>
    <string name="organize_import">整理导入</string>
    <string name="code">代码</string>
    <string name="layout">布局</string>
    <string name="add_folder">新建文件夹</string>
    <string name="file_name">文件名</string>
    <string name="user_agreement">1.作者不对利用LuaStudio产生的任何直接或间接造成利益损失负责。\n2.不得利用LuaStudio编写恶意程序损害他人。\n3.不得利用LuaStudio编写非法程序。\n4.继续使用表示你已同意该协议。</string>
    <string name="continue_button">同意并继续</string>
    <string name="add_file_dialog_title">新建文件/文件夹</string>
    <string name="project_not_open">未打开工程</string>
    <string name="about">关于</string>
    <string name="donation_button">捐赠</string>
    <string name="folder">文件夹</string>
    <string name="file_added_successfully_tip">添加文件%s成功</string>
    <string name="failed_to_create_tip">创建文件/文件夹失败</string>
    <string name="not_developed_yet">暂未开发</string>
    <string name="cannot_open_compiled_file_tip">不能打开已编译的文件</string>
    <string name="cannot_open_file_tip">不能打开这个文件</string>
    <string name="settings">设置</string>
    <string name="back">返回</string>
    <string name="file_list_back">返回上层目录</string>
    <string name="current_project">当前项目：</string>
    <string name="custom_suffix">自定义后缀</string>
    <string name="my_account">我的账号</string>
    <string name="share">分享</string>
    <string name="rename_text">重命名</string>
    <string name="choose_line_tab">选择行</string>
    <string name="copy_line_tab">复制行</string>
    <string name="cut_line_tab">剪切行</string>
    <string name="delete_line_tab">删除行</string>
    <string name="repeat_line_tab">重复行</string>
    <string name="clear_line_tab">清空行</string>
    <string name="comment_line_tab">注释行</string>
    <string name="close_tab">关闭当前标签</string>
    <string name="close_other_tab">关闭其他标签</string>
    <string name="close_all_tab">关闭全部标签</string>
    <string name="copy_filepath">复制路径</string>
    <string name="copy_filename">复制名称</string>
    <string name="local_backup_text">本地备份</string>
    <string name="join_qqgroup">加入QQ交流群</string>
    <string name="contact_dev">联系开发者</string>
    <string name="recycle_bin_text">回收站</string>
    <string name="cloud_text">云端</string>
    <string name="project_url_text">项目地址</string>
    <string name="demo_appname">HelloWorld</string>
    <string name="demo_app_packagename">com.qflistudio.helloworld</string>
    <string name="import_py_env_text">载入Python环境</string>
    <string name="compile_java_file_text">Java编译</string>
    <string name="file_upload_to_public_cloud">上传到公有云</string>
    <string name="file_hist_version">文件历史版本</string>
    <string name="jianguoyun_url_text">https://dav.jianguoyun.com/dav/</string>
    <string name="webdav_password_text">WebDav密码</string>
    <string name="webdav_username_text">WebDav账号</string>
    <string name="webdav_url_text">WebDav地址</string>
    <string name="file_type_text">文件类型</string>
    <string name="search_project">搜索工程</string>
</resources>