<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/webdav_serve_til"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/webdav_serve_tiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:hint="@string/webdav_url_text"
            android:text="@string/jianguoyun_url_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/webdav_account_til"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/webdav_account_tiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:hint="@string/webdav_username_text" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/webdav_password_til"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/webdav_password_tiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:hint="@string/webdav_password_text"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/webdav_dlg_check_box"
        android:layout_gravity="end"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="30dp"
        android:text="@string/show_password"/>
</androidx.appcompat.widget.LinearLayoutCompat>